# qwen-finance

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: accounts.py  auth.py  categories.py  reports.py  transactions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  account.py  category.py  transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  category.py  report.py  transaction.py  user.py
plans/: plano-completo.md
